--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<java-version>1.8</java-version>
 		<org.springframework-version>4.1.4.RELEASE</org.springframework-version>
 		<org.strutsframework-version>2.3.20</org.strutsframework-version>
+		<log4j.version>1.2.17</log4j.version>
 		<org.hibernateframework-version>4.3.8.Final</org.hibernateframework-version>
 		<hsqldb.version>2.2.8</hsqldb.version>
 		<junit.version>4.11</junit.version>
@@ -105,11 +106,11 @@
 			<artifactId>spring-test</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
-		   <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>${org.springframework-version}</version>
-        </dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
@@ -127,6 +128,11 @@
 		<dependency>
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-spring-plugin</artifactId>
+			<version>${org.strutsframework-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-json-plugin</artifactId>
 			<version>${org.strutsframework-version}</version>
 		</dependency>
 
@@ -154,6 +160,13 @@
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 			<version>${hsqldb.version}</version>
+		</dependency>
+		
+		<!-- Log4j -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>${log4j.version}</version>
 		</dependency>
 
 		<!-- testing -->
